--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <button type="button" id="theme">Dark</button>
-        <a href="https://realtimewatch12hour.netlify.app" target="_blank" id="other-page-watch">12 HOUR WATCH</a>
+        <a href="https://runch02.github.io/12_hour_watch.github.io/" target="_blank" id="other-page-watch">12 HOUR WATCH</a>
         <!-- <button id="twelve-hour">12 HOUR</button> -->
         <!-- <button id="twenty-four-hour">24 HOUR</button> -->
     </header>
